apps/demo/app-c/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-c
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app: app-c
