apps/demo/app-c/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-c
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app-c.monitoring.devopstech.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-c
                port:
                  number: 80
